2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/xfree86/fbdevhw/Makefile.am:
	Clean up generated files to pass distcheck

	* hw/xfree86/getconfig/Makefile.am:
	Clean up generated files to pass distcheck
	Distribute getconfig.man.pre, not getconfig.man

2005-10-05  Kristian Høgsberg  <krh@redhat.com>

	* afb/Makefile.am:
	* cfb/Makefile.am:
	* configure.ac:
	* dix/Makefile.am:
	* fb/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/dixmods/extmod/Makefile.am:
	Add DGA configure option and add various files that we should be
	dist'ing.  Simplify xf86DefModeSet.c rule a bit.

2005-10-05  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Preprocess and install XOrgCfg.ad as in the monolith.

2005-10-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4038: Unbreak the SYSVIPC check for cross builds. (Detlef Vollman)

2005-10-04  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am:
	Add miext/cw to the module loader include path so that misym.c can export
	miDisableCompositeWrapper.

2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: Add missing ]	 (Dawid Gajownik)
	* hw/xfree86/Makefile.am (SUBDIRS): Add getconfig (Dawid Gajownik)

2005-10-02  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/exa/Makefile.am:
	Fix include path for commit of bug #4616.

2005-09-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	Add kbd_mode build system

2005-09-27  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* XpConfig/C/print/Makefile.am:
	* XpConfig/C/print/attributes/Makefile.am:
	* XpConfig/C/print/ddx-config/raster/Makefile.am:
	* XpConfig/C/print/models/CANONBJ10E-GS/Makefile.am:
	* XpConfig/C/print/models/CANONC3200-PS/Makefile.am:
	* XpConfig/C/print/models/GSdefault/Makefile.am:
	* XpConfig/C/print/models/HPLJ4050-PS/Makefile.am: