@@ -1,0 +1,50 @@
+bin_PROGRAMS = \
+	xdmx dmxwininfo dmxreconfig dmxresize \
+	dmxaddscreen dmxrmscreen \
+	dmxaddinput dmxrminput
+noinst_PROGRAMS = xinput xtest evi res xled xbell ev
+
+xdmx_SOURCES = xdmx.c
+xdmx_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxwininfo_SOURCES = dmxwininfo.c
+dmxwininfo_LDADD = @DMXXMUEXAMPLES_DEP_LIBS@
+
+dmxreconfig_SOURCES = dmxreconfig.c
+dmxreconfig_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxresize_SOURCES = dmxresize.c
+dmxresize_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxaddscreen_SOURCES = dmxaddscreen.c
+dmxaddscreen_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxrmscreen_SOURCES = dmxrmscreen.c
+dmxrmscreen_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxaddinput_SOURCES = dmxaddinput.c
+dmxaddinput_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+dmxrminput_SOURCES = dmxrminput.c
+dmxrminput_LDADD = @DMXEXAMPLES_DEP_LIBS@
+
+xinput_SOURCES = xinput.c
+xinput_LDADD = @DMXXIEXAMPLES_DEP_LIBS@
+
+xtest_SOURCES = xtest.c
+xtest_LDADD = @XTSTEXAMPLES_DEP_LIBS@
+
+evi_SOURCES = evi.c
+evi_LDADD = @X11EXAMPLES_DEP_LIBS@
+
+res_SOURCES = res.c
+res_LDADD = @XRESEXAMPLES_DEP_LIBS@
+
+xled_SOURCES = xled.c
+xled_LDADD = @X11EXAMPLES_DEP_LIBS@
+
+xbell_SOURCES = xbell.c
+xbell_LDADD = @X11EXAMPLES_DEP_LIBS@
+
+ev_SOURCES = ev.c
+ev_LDADD = 
