@@ -59,3 +59,5 @@ AM_CFLAGS = -I$(top_srcdir)/hw/dmx \
             -I$(top_srcdir)/hw/xfree86/common \
             -DHAVE_DMX_CONFIG_H \
             @DMXMODULES_CFLAGS@
+
+EXTRA_DIST = dmxdetach.c
